--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -62,8 +62,9 @@ header {
 }
 
 .Navbar {
-  position: sticky;
-  top: 0px;
+  position: fixed;
+  width: 100%;
+  top: 0;
   color: #004884;
   font-weight: bold;
   letter-spacing: 1px;
@@ -72,7 +73,8 @@ header {
   align-items: center;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.877);
-  opacity: 0.6;
+  opacity: 0.9;
+  z-index: 999999999;
 
   h1 {
     font-family: "Architype Albers W00";
@@ -134,7 +136,7 @@ header {
 
   p {
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: 1px;
     line-height: 1.5;
     color: #004884;
