--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -46,6 +46,11 @@ h1 {
   text-align: center;
 }
 
+#Paragraph {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 p {
   font-size: 18px;
   font-weight: 500;
@@ -76,6 +81,10 @@ table {
 .container {
   max-width: 1920px;
   margin: 0 auto;
+}
+
+.hamburgermenu-container {
+  display: none;
 }
 
 header {
@@ -154,9 +163,6 @@ nav {
 
 #Introduction {
   padding: 30px;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
   gap: 100px;
   text-align: center;
 
@@ -228,26 +234,29 @@ nav {
 }
 
 #why {
-  height: 600px;
   margin: 0 auto;
   text-align: center;
-  margin-bottom: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 100px;
+  padding: 30px;
+  gap: 100px;
 
   img {
-    width: 400px;
+    margin: 0 auto;
+    width: 300px;
     margin-bottom: 30px;
   }
 
   #EuPhoto img {
-    margin-left: 50px;
+    margin-left: 15px;
+    margin-bottom: 10px;
   }
 
   h2 {
     margin-bottom: 8px;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: bold;
     letter-spacing: 1px;
     color: #006c8b;
@@ -265,6 +274,15 @@ nav {
     user-select: none;
     text-align: center;
   }
+}
+
+.WhyUsItem {
+  text-align: center;
+  width: 300px;
+  height: 450px;
+  border-bottom: 1px solid #006c8b;
+  border-top: 1px solid #006c8b;
+  padding-block: 20px;
 }
 
 .allHeading {
@@ -315,7 +333,7 @@ nav {
 
   p {
     width: 300px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.5px;
     color: #006c8b;
@@ -334,11 +352,11 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 50px;
   gap: 50px;
   margin-bottom: 100px;
   img {
-    width: 200px;
+    width: 150px;
     margin: 0 auto;
     border-radius: 14px;
     margin-bottom: 20px;
@@ -347,8 +365,8 @@ nav {
   h2 {
     text-align: center;
     margin-bottom: 8px;
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: bolder;
     letter-spacing: 1px;
     color: #006c8b;
     user-select: none;
@@ -356,7 +374,7 @@ nav {
   }
 
   p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 1px;
     line-height: 1.5;
@@ -368,6 +386,9 @@ nav {
 }
 
 .HowWeSolve-Item {
+  text-align: center;
+  width: 300px;
+  height: 450px;
   border-bottom: 1px solid #006c8b;
   border-top: 1px solid #006c8b;
   padding-block: 20px;
@@ -800,17 +821,17 @@ h2 a {
 }
 
 #ourTeam {
-  scroll-margin-top: 250px; /* Navbar yüksekliğine göre ayarlayın */
+  scroll-margin-top: 70px; /* Navbar yüksekliğine göre ayarlayın */
 }
 
 .Team {
-  padding: 10px;
+  padding: 30px;
   display: grid;
   justify-content: center;
   align-content: center;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
-  gap: 30px;
+  gap: 15px;
   margin-bottom: 100px;
 
   h3 {
@@ -835,7 +856,7 @@ h2 a {
 .Team-Item {
   border: 1px solid transparent;
   border-radius: 14px;
-  padding: 1px;
+  padding: 20px;
   background-color: transparent;
   -webkit-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
   -moz-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
