--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -122,6 +122,15 @@ nav {
     font-family: "Architype Albers W00";
   }
 
+  h3 {
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #006c8b;
+    user-select: none;
+  }
+
   ol {
     display: flex;
     gap: 50px;
@@ -555,7 +564,6 @@ nav {
 h1 {
   color: white;
   text-align: center;
-  margin-top: 1em;
 }
 
 .container {
@@ -937,7 +945,6 @@ form {
   min-width: 25rem;
 
   .title {
-    font-family: "Pacifico", cursive;
     color: #006c8b;
     font-size: 2.5rem;
   }
@@ -965,7 +972,6 @@ form {
   }
 
   ::placeholder {
-    font-family: "Quicksand", sans-serif;
     font-weight: 600;
     font-size: 1.1rem;
     color: #838788;
@@ -976,7 +982,6 @@ form {
   input,
   textarea {
     margin-bottom: 10px;
-    font-family: "Quicksand", sans-serif;
     color: #212529;
     font-size: 1.1rem;
     resize: none;
@@ -2110,7 +2115,6 @@ footer {
     min-width: 25rem;
 
     .title {
-      font-family: "Pacifico", cursive;
       color: #006c8b;
       font-size: 2.5rem;
     }
@@ -2138,7 +2142,6 @@ footer {
     }
 
     ::placeholder {
-      font-family: "Quicksand", sans-serif;
       font-weight: 600;
       font-size: 1.1rem;
       color: #838788;
@@ -2149,7 +2152,6 @@ footer {
     input,
     textarea {
       margin-bottom: 10px;
-      font-family: "Quicksand", sans-serif;
       color: #212529;
       font-size: 1.1rem;
       resize: none;
@@ -2165,7 +2167,6 @@ footer {
   }
 
   .btn.btn-primary {
-    font-family: "Quicksand", sans-serif;
     font-weight: bold;
     height: 2.5rem;
     line-height: 2.5rem;
