--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -570,6 +570,10 @@ h1 {
   text-align: center;
 }
 
+.carousel-Container {
+  margin-bottom: 100px;
+}
+
 .container {
   overflow: hidden;
   padding: 20px;
@@ -577,6 +581,7 @@ h1 {
 }
 
 .card-carousel {
+  margin-bottom: 100px;
   --card-width: 80%;
   --card-max-width: 280px;
   --card-height: 350px;
@@ -680,6 +685,7 @@ h2 a {
 
 #sliderCompanySection {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 100px;
@@ -693,12 +699,13 @@ h2 a {
 }
 
 .partners-Item {
+  width: 600px;
+  padding: 30px;
+  gap: 60px;
   display: flex;
-  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
   border: 3px solid transparent;
-  cursor: pointer;
-  gap: 10px;
-  padding: 10px;
   border-radius: 14px;
   -webkit-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
   -moz-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
@@ -719,6 +726,7 @@ h2 a {
 
 #ourAdvisors {
   display: flex;
+  flex-direction: row;
   text-align: center;
   padding-inline: 30px;
   justify-content: center;
@@ -735,8 +743,7 @@ h2 a {
 
 .advisors-Item {
   padding: 30px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   gap: 50px;
   padding-inline: 30px;
   justify-content: center;
@@ -786,8 +793,8 @@ h2 a {
 
 .sgdGoal {
   gap: 10px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   border-radius: 14px;
   -webkit-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
   -moz-box-shadow: 0px 0px 33px -14px rgba(0, 108, 139, 1);
@@ -1827,8 +1834,8 @@ footer {
 
   #sliderCompanySection {
     padding: 30px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 100px;
