--- a/assets/css/Faq.css
+++ b/assets/css/Faq.css
@@ -215,3 +215,41 @@ nav {
   margin-bottom: 8px;
   user-select: none;
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  align-items: center;
+  width: 100%;
+  background-color: #006c8b;
+  color: #f2f2f2;
+  text-align: center;
+
+  h3 {
+    margin-bottom: 8px;
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #f2f2f2;
+    user-select: none;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    color: #f2f2f2;
+    margin-bottom: 8px;
+    user-select: none;
+  }
+}
+
+.footerContainer {
+  display: flex;
+  align-items: center;
+  gap: 300px;
+  margin-bottom: 50px;
+}
