--- a/assets/css/Faq.css
+++ b/assets/css/Faq.css
@@ -164,7 +164,7 @@ nav {
 }
 .faq-container {
   width: 100%;
-  height: 50rem;
+  height: 40rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -252,4 +252,121 @@ footer {
   align-items: center;
   gap: 300px;
   margin-bottom: 50px;
+}
+@media (max-width: 768px) {
+  footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #006c8b;
+    color: #f2f2f2;
+    text-align: center;
+
+    h3 {
+      margin-bottom: 8px;
+      font-size: 24px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #f2f2f2;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #f2f2f2;
+      margin-bottom: 8px;
+      user-select: none;
+    }
+  }
+
+  .footerContainer {
+    display: flex;
+    align-items: center;
+    gap: 100px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (min-width: 425px) {
+  footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #006c8b;
+    color: #f2f2f2;
+    text-align: center;
+
+    h3 {
+      margin-bottom: 8px;
+      font-size: 24px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #f2f2f2;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #f2f2f2;
+      margin-bottom: 8px;
+      user-select: none;
+    }
+  }
+
+  .footerContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 375px) {
+  footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #006c8b;
+    color: #f2f2f2;
+    text-align: center;
+
+    h3 {
+      margin-bottom: 8px;
+      font-size: 24px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #f2f2f2;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #f2f2f2;
+      margin-bottom: 8px;
+      user-select: none;
+    }
+  }
+
+  .footerContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-bottom: 50px;
+  }
 }
