--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -923,17 +923,18 @@ nav {
 
 .formAndImage {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-  margin-bottom: 100px;
+  gap: 0px;
+  margin-bottom: 20px;
   margin: 0 auto;
 }
 
 svg {
   width: 400px;
   height: 400px;
-  margin-bottom: 100px;
+  margin-bottom: 30px;
   margin-left: 50px;
 }
 
@@ -4349,15 +4350,26 @@ footer {
 
   /* Contact Form */
 
-  svg {
-    height: 23rem;
-    margin-right: 4rem;
+  .formAndImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin-bottom: 100px;
+    margin: 0 auto;
   }
-
+  
+  svg {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 100px;
+    margin-left: 50px;
+  }
+  
   #envelope {
     animation: float 2s ease-in-out infinite;
   }
-
+  
   #star1,
   #star2,
   #star3,
@@ -4381,7 +4393,7 @@ footer {
   #star6 {
     animation-delay: 200ms;
   }
-
+  
   @keyframes float {
     0% {
       transform: translateY(0px);
@@ -4393,7 +4405,7 @@ footer {
       transform: translateY(0px);
     }
   }
-
+  
   @keyframes blink {
     0% {
       opacity: 0;
@@ -4405,74 +4417,46 @@ footer {
       opacity: 1;
     }
   }
-
-  #formAndImage {
-    padding: 30px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #contact {
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 10px;
-
-    svg {
-      margin: 0 auto;
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      margin-left: 60px;
-    }
-  }
-
+  
   .container {
     height: 100vh;
   }
-
+  
   #contact {
-    scroll-margin-top: 90px; /* Navbar yüksekliğine göre ayarlayın */
+    scroll-margin-top: 140px; /* Navbar yüksekliğine göre ayarlayın */
   }
-
+  
   form {
-    padding: 30px;
     margin-bottom: 100px;
     min-width: 25rem;
-
+  
     .title {
       color: #006c8b;
       font-size: 2.5rem;
     }
-
+  
     .form-control {
       background-color: #f2f6f8;
       border-radius: 2rem;
       border: none;
       box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
-
+  
       &.thick {
         height: 3.3rem;
         padding: 0.5rem 3.5rem;
       }
-
+  
       &:focus {
         background-color: #f2f6f8;
         border: none;
         box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
       }
     }
-
+  
     .message .form-control {
       padding: 0.5rem 1.8rem;
     }
-
+  
     ::placeholder {
       font-weight: 600;
       font-size: 1.1rem;
@@ -4480,7 +4464,7 @@ footer {
       position: relative;
       left: 0;
     }
-
+  
     input,
     textarea {
       margin-bottom: 10px;
@@ -4488,7 +4472,7 @@ footer {
       font-size: 1.1rem;
       resize: none;
     }
-
+  
     .icon {
       color: #57565c;
       height: 1.3rem;
@@ -4497,31 +4481,26 @@ footer {
       top: 1.1rem;
     }
   }
-
+  
   .btn.btn-primary {
+    font-family: "Quicksand", sans-serif;
     font-weight: bold;
     height: 2.5rem;
     line-height: 2.5rem;
     padding: 0 3rem;
     border: 0;
     border-radius: 3rem;
-    background-image: linear-gradient(
-      131deg,
-      #ffd340,
-      #ff923c,
-      #ff923c,
-      #ff923c
-    );
+    background-image: linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
     background-size: 300% 100%;
     transition: all 0.3s ease-in-out;
   }
-
+  
   .btn.btn-primary:hover:enabled {
     box-shadow: 0 0.5em 0.5em -0.4em #ff923cba;
     background-size: 100% 100%;
     transform: translateY(-0.15em);
   }
-
+  
   /* Contact Form */
 
   /* Milestones */
