--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -84,6 +84,43 @@ table {
   margin: 0 auto;
 }
 
+.Revolutionary {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  gap: 50px;
+  margin-bottom: 100px;
+
+  img {
+    width: 300px;
+    margin: 0 auto;
+    border-radius: 14px;
+  }
+
+  h1 {
+    margin-bottom: 20px;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #006c8b;
+    user-select: none;
+  }
+
+  p {
+    width: 700px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    color: #006c8b;
+    margin-bottom: 8px;
+    user-select: none;
+    text-align: center;
+  }
+}
+
 .hamburgermenu-container {
   display: none;
 }
@@ -281,7 +318,7 @@ nav {
     margin-bottom: 10px;
   }
 
-  h2 {
+  h1 {
     margin-bottom: 8px;
     font-size: 32px;
     font-weight: bold;
@@ -1412,6 +1449,44 @@ footer {
     }
   }
 
+  .Revolutionary {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 50px;
+    margin-bottom: 100px;
+
+    img {
+      width: 500px;
+      margin: 0 auto;
+      border-radius: 14px;
+    }
+
+    h1 {
+      margin-bottom: 8px;
+      font-size: 32px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #006c8b;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      width: 700px;
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #006c8b;
+      margin-bottom: 8px;
+      user-select: none;
+      text-align: center;
+    }
+  }
+
   #about {
     scroll-margin-top: -40px; /* Navbar yüksekliğine göre ayarlayın */
     padding-block: 20px;
@@ -2378,6 +2453,44 @@ footer {
     margin: 0 auto;
   }
 
+  .Revolutionary {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 50px;
+    margin-bottom: 100px;
+
+    img {
+      width: 300px;
+      margin: 0 auto;
+      border-radius: 14px;
+    }
+
+    h1 {
+      margin-bottom: 8px;
+      font-size: 32px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #006c8b;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      width: 300px;
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #006c8b;
+      margin-bottom: 8px;
+      user-select: none;
+      text-align: center;
+    }
+  }
+
   .HeadingAndParagraph {
     padding: 30px;
   }
@@ -3332,6 +3445,7 @@ footer {
   }
 
   h1 {
+    color: #006c8b;
     text-align: center;
   }
   ul {
@@ -3566,6 +3680,44 @@ footer {
 @media (max-width: 375px) {
   nav {
     display: none;
+  }
+
+  .Revolutionary {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 50px;
+    margin-bottom: 100px;
+
+    img {
+      width: 300px;
+      margin: 0 auto;
+      border-radius: 14px;
+    }
+
+    h1 {
+      margin-bottom: 8px;
+      font-size: 32px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #006c8b;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    p {
+      width: 300px;
+      font-size: 18px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 1.5;
+      color: #006c8b;
+      margin-bottom: 8px;
+      user-select: none;
+      text-align: center;
+    }
   }
 
   .container {
@@ -4358,18 +4510,18 @@ footer {
     margin-bottom: 100px;
     margin: 0 auto;
   }
-  
+
   svg {
     width: 400px;
     height: 400px;
     margin-bottom: 100px;
     margin-left: 50px;
   }
-  
+
   #envelope {
     animation: float 2s ease-in-out infinite;
   }
-  
+
   #star1,
   #star2,
   #star3,
@@ -4393,7 +4545,7 @@ footer {
   #star6 {
     animation-delay: 200ms;
   }
-  
+
   @keyframes float {
     0% {
       transform: translateY(0px);
@@ -4405,7 +4557,7 @@ footer {
       transform: translateY(0px);
     }
   }
-  
+
   @keyframes blink {
     0% {
       opacity: 0;
@@ -4417,46 +4569,46 @@ footer {
       opacity: 1;
     }
   }
-  
+
   .container {
     height: 100vh;
   }
-  
+
   #contact {
     scroll-margin-top: 140px; /* Navbar yüksekliğine göre ayarlayın */
   }
-  
+
   form {
     margin-bottom: 100px;
     min-width: 25rem;
-  
+
     .title {
       color: #006c8b;
       font-size: 2.5rem;
     }
-  
+
     .form-control {
       background-color: #f2f6f8;
       border-radius: 2rem;
       border: none;
       box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
-  
+
       &.thick {
         height: 3.3rem;
         padding: 0.5rem 3.5rem;
       }
-  
+
       &:focus {
         background-color: #f2f6f8;
         border: none;
         box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.11);
       }
     }
-  
+
     .message .form-control {
       padding: 0.5rem 1.8rem;
     }
-  
+
     ::placeholder {
       font-weight: 600;
       font-size: 1.1rem;
@@ -4464,7 +4616,7 @@ footer {
       position: relative;
       left: 0;
     }
-  
+
     input,
     textarea {
       margin-bottom: 10px;
@@ -4472,7 +4624,7 @@ footer {
       font-size: 1.1rem;
       resize: none;
     }
-  
+
     .icon {
       color: #57565c;
       height: 1.3rem;
@@ -4481,7 +4633,7 @@ footer {
       top: 1.1rem;
     }
   }
-  
+
   .btn.btn-primary {
     font-family: "Quicksand", sans-serif;
     font-weight: bold;
@@ -4490,17 +4642,23 @@ footer {
     padding: 0 3rem;
     border: 0;
     border-radius: 3rem;
-    background-image: linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
+    background-image: linear-gradient(
+      131deg,
+      #ffd340,
+      #ff923c,
+      #ff923c,
+      #ff923c
+    );
     background-size: 300% 100%;
     transition: all 0.3s ease-in-out;
   }
-  
+
   .btn.btn-primary:hover:enabled {
     box-shadow: 0 0.5em 0.5em -0.4em #ff923cba;
     background-size: 100% 100%;
     transform: translateY(-0.15em);
   }
-  
+
   /* Contact Form */
 
   /* Milestones */
