--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -86,7 +86,7 @@ table {
 
 .Revolutionary {
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
   padding: 30px;
@@ -94,7 +94,7 @@ table {
   margin-bottom: 100px;
 
   img {
-    width: 300px;
+    width: 500px;
     margin: 0 auto;
     border-radius: 14px;
   }
@@ -291,6 +291,7 @@ nav {
   }
 
   img {
+    width: 500px;
     background: none;
     border-radius: 12px;
     pointer-events: none;
@@ -383,6 +384,7 @@ nav {
 
   img {
     width: 300px;
+    height: 200px;
     border-radius: 12px;
   }
 
